Bug 152069 - Export failure: The background parameters changed after export
Summary: Export failure: The background parameters changed after export
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Tibor Nagy
URL:
Whiteboard: target:7.5.0 target:7.4.4
Keywords: filter:pptx
Depends on:
Blocks: PPTX-Images
  Show dependency treegraph
 
Reported: 2022-11-16 13:06 UTC by NISZ LibreOffice Team
Modified: 2022-11-28 10:45 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
File for testing (30.67 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2022-11-16 13:07 UTC, NISZ LibreOffice Team
Details
Comparance between before and after exporting the test file (390.96 KB, image/png)
2022-11-16 13:08 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2022-11-16 13:06:41 UTC
Description:
When I open a pptx file in LO and save as another pptx the export of the Background style doesn't export correctly.


Steps to Reproduce:
1. Open the attached file in LO
2. Save as pptx.
3. Open it again.


Actual Results:
You can see that the export doesn't work correctly when you save as pptx and reload it. The background is not the same as before saving.

Expected Results:
You see the background same as before saving.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 3c0be5564afe1b9cc843a49aba88b72af74c43ab
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL threaded
Comment 1 NISZ LibreOffice Team 2022-11-16 13:07:11 UTC
Created attachment 183625 [details]
File for testing
Comment 2 NISZ LibreOffice Team 2022-11-16 13:08:43 UTC
Created attachment 183626 [details]
Comparance between before and after exporting the test file
Comment 3 Commit Notification 2022-11-24 15:57:08 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3f70375cf160841b6140f5f1b2b79af3652897f8

tdf#152069 tdf#108356 PPTX export: fix missing tile properties

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2022-11-25 16:50:49 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/405cd10aab717f31b8dd0210f10f1cb4059230a5

tdf#152069 tdf#108356 PPTX export: fix missing tile properties

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 NISZ LibreOffice Team 2022-11-28 10:45:35 UTC
Verified in:
Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 5b18eebc2c95321ce7e6edf10f4df81557382a48
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded