tdf#152069 tdf#108356 PPTX export: fix missing tile properties

of background image patterns defined by a:tile.

Note: factor "3.6" comes from EMU.

Change-Id: I5da532ff9ad63fd6c236a58933a31dcd96cf5156
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142913
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>