include/oox/export/drawingml.hxx
@@ -275,6 +275,9 @@ public:
     void WriteXGraphicStretch(css::uno::Reference<css::beans::XPropertySet> const & rXPropSet,
                               css::uno::Reference<css::graphic::XGraphic> const & rxGraphic);
 
+    void WriteXGraphicTile(css::uno::Reference<css::beans::XPropertySet> const& rXPropSet,
+                           css::uno::Reference<css::graphic::XGraphic> const& rxGraphic);
+
     void WriteLinespacing(const css::style::LineSpacing& rLineSpacing, float fFirstCharHeight);
 
     OUString WriteXGraphicBlip(css::uno::Reference<css::beans::XPropertySet> const & rXPropSet,
